# sparx

./: .credo.exs  .gitignore  CLAUDE.md  Justfile  README.md  mix.exs
examples/: echo_server.exs  hello_world.exs  http2_demo.exs  websocket_echo.exs
lib/: sparx.ex
lib/sparx/: config.ex  native.ex  request.ex  response.ex
native/sparx/: Cargo.toml  build.rs
native/sparx/src/: atoms.rs  config.rs  lib.rs  request.rs  response.rs  server.rs  websocket.rs
test/: sparx_test.exs
