[package]
name = "sparx"
version = "0.1.0"
edition = "2021"
authors = ["Sonny Scroggin <scrogson@gmail.com>"]

[lib]
name = "sparx"
crate-type = ["cdylib"]

[dependencies]
rustler = { git = "https://github.com/rusterlium/rustler", branch = "async-nifs" }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.23"
bytes = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
